--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>react-project</title>
   <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <div id="app"></div>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/babel" src="app.jsx"></script>
+  <script type="text/babel" src="js/App.jsx"></script>
+</head>
+<body>
+  <div id="app"></div>
+
+
 </body>
 </html>
