--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,16 @@
   <script type="text/babel" src="js/App.jsx"></script>
 </head>
 <body>
+  <style>
+    .show {
+      display: block;
+    }
+    .hidden {
+      display: none;
+    }
+  </style>
   <div id="app"></div>
   <h1>Project body</h1>
-
 
 </body>
 </html>
