--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,12 @@
     .hidden {
       display: none;
     }
+    .green {
+      border-color: green;
+    }
+    .red {
+      border-color: red;
+    }
   </style>
   <div id="app"></div>
   <h1>Project body</h1>
