--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,16 @@
       display: none;
     }
     .green {
-      border-color: green;
+      color: green;
     }
     .red {
-      border-color: red;
+      color: red;
+    }
+    .link {
+      display: inline;
+    }
+    .no-link {
+      display: none;
     }
   </style>
   <div id="app"></div>
